--- a/source/layouts/includes/header.jade
+++ b/source/layouts/includes/header.jade
@@ -6,7 +6,7 @@
         a.brand-logo.left( href="#" )
           img( src="/upload/travellers-logo.png" alt="Travellers" )
           
-        ul.b-header-top-menu.center.hide-on-med-and-down
+        ul.unstyled.b-header-top-menu.center.hide-on-med-and-down
           li
             span.i-disabled( href="" ) Туры
           li
@@ -16,7 +16,7 @@
           li
             a( href="" ) О нас
         
-        ul.b-header-icons.right
+        ul.unstyled.b-header-icons.right
           li
             a( href="" )
               i.material-icons phone
@@ -24,7 +24,7 @@
             a.b-header-nav( href="" data-activates="slide-out" )
               i.material-icons view_headline
               
-        ul#slide-out.side-nav
+        ul#slide-out.side-nav.unstyled
           li.side-nav-back(  data-activates="slide-out" )
           li.side-nav-logo
             a( href="" )
