--- a/source/styl/scaffolding.styl
+++ b/source/styl/scaffolding.styl
@@ -16,12 +16,18 @@
       a
         vertical-align top
         
-  &-top-menu
+  ul&-top-menu
     margin-left 31%
     
   &-icons
     a
       padding 0 20px
+  
+  a,
+  a:hover,
+  a:focus
+    text-decoration none
+    color inherit
       
 .side-nav
   a
