--- a/source/styl/gui.styl
+++ b/source/styl/gui.styl
@@ -1,2 +1,61 @@
 body
   background #fff
+  font-size 12pt
+  line-height 1.9
+  
+h1
+  font-size 32pt
+  line-height 1.74
+  font-weight bold
+  margin-bottom 0.5rem
+  
+h2
+  font-size 20pt
+  line-height 1.4
+  font-weight bold
+  margin 1.5rem 0 1.4rem 0
+  
+h3
+  font-size 13.5pt
+  line-height 1.4
+  font-weight bold
+  
+p
+  margin 0 0 15pt
+  
+ul,
+ol
+  padding-left 40px
+  margin-bottom 15px
+  
+  &:last-child
+    margin-bottom 0
+  
+  li
+    padding-left 2px
+    margin-bottom 14px
+    font-size 13.5pt
+    
+    &:last-child
+      margin-bottom 0
+    
+  &.unstyled
+    padding 0
+    margin 0
+    
+    li
+      list-style-type none
+      padding 0
+      margin 0
+      font-size inherit
+    
+ul
+  li
+    list-style-type disc
+    
+hr
+  &.i-size-XL
+    margin 65px 0
+    
+  &.i-unstyled
+    border-color transparent
