Banners on the index page.

--- a/source/index.jade
+++ b/source/index.jade
@@ -4,4 +4,10 @@ block title
   title Main page | travellers
 
 block content
-  h1 travellers main page
+
+  hr.i-unstyled
+  
+  include ./components/banner.3/template
+  include ./components/banner.111/template
+  include ./components/banner.21/template
+  include ./components/banner.12/template
