--- a/source/styl/bootstrap-override.styl
+++ b/source/styl/bootstrap-override.styl
@@ -10,5 +10,7 @@ a
   padding-right 15px
   padding-left 15px
   
-.row
+.container .row
+  margin-right -15px
+  margin-left -15px
   margin-bottom 30px
