--- a/source/styl/materialize-override.styl
+++ b/source/styl/materialize-override.styl
@@ -31,3 +31,38 @@ nav ul span
   font-size 1rem
   color #fff
   display inline-block
+  
+.tabs
+  background-color transparent
+  
+  nav &
+    height 100px
+  
+  .tab
+    text-transform none
+    letter-spacing 0
+    
+    .valign-wrapper
+      display -webkit-flex
+      display -ms-flexbox
+      display flex
+      -webkit-align-items center
+      -ms-flex-align center
+      align-items center
+    
+    nav &
+      height 100px
+      white-space normal
+    
+    a
+      color #fff
+      
+      &:hover,
+      &:focus
+        color #fff
+        opacity( 0.6 )
+        
+.center
+  text-align center
+  vertical-align middle
+  
