--- a/source/components/forms/template.jade
+++ b/source/components/forms/template.jade
@@ -7,7 +7,7 @@ script( src="/components/forms/script.js" )
   .row
     .col-sm-12
       nav
-        ul.tabs
+        ul.unstyled.tabs
         
           li.tab.col-sm-3
             a( href="#form1" ).valign-wrapper
