--- a/source/layouts/includes/header.jade
+++ b/source/layouts/includes/header.jade
@@ -18,11 +18,11 @@
         
         ul.unstyled.b-header-icons.right
           li
-            a( href="" )
-              i.material-icons phone
+            a( href="" ).b-phone-icon
+              i
           li
-            a.b-header-nav( href="" data-activates="slide-out" )
-              i.material-icons view_headline
+            a.b-header-nav.b-menu-icon( href="" data-activates="slide-out" )
+              i
               
         ul#slide-out.side-nav.unstyled
           li.side-nav-back(  data-activates="slide-out" )
