--- a/source/styl/scaffolding.styl
+++ b/source/styl/scaffolding.styl
@@ -48,3 +48,19 @@
     a
       height 100px
       line-height 100px
+      
+.b-phone-icon
+  i
+    display inline-block
+    vertical-align middle
+    width 30px
+    height 30px
+    background embedurl( 'img/phone-icon.png' ) no-repeat center center
+      
+.b-menu-icon
+  i
+    display inline-block
+    vertical-align middle
+    width 30px
+    height 30px
+    background embedurl( 'img/menu-icon.png' ) no-repeat center center
