Pic icons markup

--- a/markup/components/forms/template.html
+++ b/markup/components/forms/template.html
@@ -6,7 +6,7 @@
   <div class="row">
     <div class="col-sm-12">
       <nav>
-        <ul class="tabs">
+        <ul class="unstyled tabs">
           <li class="tab col-sm-3"><a href="#form1" class="valign-wrapper"><span class="valign center">Поиск туров</span></a></li>
           <li class="tab col-sm-3"><a href="#form2" class="valign-wrapper"><span class="valign center">Поиск авиабилетов</span></a></li>
           <li class="tab col-sm-3 disabled"><a href="#form3" class="valign-wrapper"><span class="valign center">Поиск отелей</span></a></li>
