--- a/source/layouts/includes/footer.jade
+++ b/source/layouts/includes/footer.jade
@@ -1,6 +1,57 @@
 ﻿footer.b-footer
   section.container
-    .b-row
-      .b-col-sm-4
-      .b-col-sm-4
-      .b-col-sm-4
+    .row
+      .col-sm-4
+        h3 О компании
+        pS7 Airlines (бренд авиакомпании «Сибирь») обладает широкой сетью внутренних маршрутов, выстроенной на базе авиатранспортных узлов в Москве (Домодедово) и Новосибирске (Толмачёво). S7 Airlines также выполняет <a href="">регулярные</a> полеты в страны СНГ, Европу, Ближний Восток, Юго-Восточную Азию и страны Азиатско-Тихоокеанского региона.
+        
+      .col-sm-4
+        h3 Офис
+        p Мневники, дом 3, строение 1, офис 224.<br>
+          a( href="" ) На карте (Схема проезда)
+          
+        h3 Телефоны
+        p + 8 888 88 88 (для Москвичей)<br>+ 7 777 77 77 (для всей России)
+        
+        hr.i-unstyled
+        
+        ul.unstyled.b-footer-social
+          li
+            a( href="" ).i-vk
+          li
+            a( href="" ).i-ok
+          li
+            a( href="" ).i-fb
+          li
+            a( href="" ).i-tw
+          li
+            a( href="" ).i-gp
+
+
+      .col-sm-4
+        h3 Полезная информация
+        ul.unstyled
+          li
+            a( href="" ) Туры
+          li
+            a( href="" ) Авиабилеты
+          li
+            a( href="" ) Отели
+          li
+            a( href="" ) Аренда автомобилей
+          li
+            a( href="" ) О компании
+            
+    hr.i-size-L
+    
+    .xsmall
+      p Все приведенные на настоящем сайте стоимостные показатели туристских услуг являются частью оферты, предназначенной для юридических лиц (туристских агентств) заключивших договоры с ООО "Джет Тревел" и занесенных в реестр агентств ООО "Джет Тревел".
+      p ООО "Джет Тревел" намерено в соответствии со ст. 435 ГК РФ реализовать туристский продукт тем агентствам из реестра агентств ООО "Джет Тревел", которыми будет принято предложение. Оферта действует на день предложения.
+      p Информация (в том числе, о стоимости турпродукта), содержащаяся на интернет-сайте www.jettravel.ru предназначена для определенного ограниченного круга юридических лиц: исключительно для туристских агентств, заключивших агентские договоры с OOО "Джет Тревел" и содержащихся в базе данных агентств ООО "Джет Тревел"; вся информация (в том числе, о стоимости турпродукта) для любых иных юридических и физических лиц может быть получена при личном обращении в компанию по телефонам и адресам электронной почты, приведенным на сайте.
+    
+    hr.i-unstyled.i-size-S
+    
+    .row.xsmall
+      .col-xs-6 © Сopyright. Traveller 2016
+      .col-xs-6.text-right
+        a( href="http://bejet.ru" target="_blank" ) Решение создано в Bejet.
