--- a/source/styl/gui.styl
+++ b/source/styl/gui.styl
@@ -54,11 +54,28 @@ ul
     list-style-type disc
     
 hr
+  &.i-size-XS
+    margin 2px 0
+    
+  &.i-size-S
+    margin 5px 0
+    
+  &.i-size-L
+    margin 40px 0
+    
   &.i-size-XL
     margin 65px 0
     
+  &.unstyled,
   &.i-unstyled
     border-color transparent
     
 a:focus
   outline none
+  
+.xsmall
+  font-size 70%
+  line-height 1.4
+  
+  p
+    margin 10px 0
