--- a/source/styl/scaffolding.styl
+++ b/source/styl/scaffolding.styl
@@ -64,3 +64,37 @@
     width 30px
     height 30px
     background embedurl( 'img/menu-icon.png' ) no-repeat center center
+    
+.b-footer
+  background-color #fff
+  padding-top 66px
+  padding-bottom 15px
+  
+  ul&-social
+    
+    li
+      display inline-block
+      vertical-align top
+      
+    a
+      display inline-block
+      vertical-align top
+      width 32px
+      height 32px
+      background-repeat no-repeat
+      background-position center
+      
+    .i-vk
+      background-image embedurl( 'img/vk.png' )
+      
+    .i-ok
+      background-image embedurl( 'img/ok.png' )
+      
+    .i-fb
+      background-image embedurl( 'img/fb.png' )
+      
+    .i-tw
+      background-image embedurl( 'img/tw.png' )
+      
+    .i-gp
+      background-image embedurl( 'img/gp.png' )
