--- a/source/components/forms/style.styl
+++ b/source/components/forms/style.styl
@@ -1,6 +1,8 @@
 @import '../../styl/component-include.styl'
         
 .b-forms
+  margin-left -15px
+  margin-right -15px
   background-color #fff
 
   .tabs
@@ -17,6 +19,9 @@
           
       &.disabled
         opacity( 0.4 )
+        
+  nav ul
+    border-bottom 1px solid #f4f4f4
 
   &__tab
     padding 15px
