--- a/source/components/forms/template.jade
+++ b/source/components/forms/template.jade
@@ -26,7 +26,8 @@ script( src="/components/forms/script.js" )
               span.valign.center Бронирование автомобилей
           
     #form1.col-sm-12.b-forms__tab
-      div( style="width: 300px; background-color: pink;" ) form1
+      div( style="width: 300px; background-color: pink;" ) <script charset="utf-8" src="//www.travelpayouts.com/widgets/da489d8f0fb702dbcbd9a81294264b48.js?v=469" async></script>
+
     
     #form2.col-sm-12.b-forms__tab
       div( style="width: 100px; background-color: lightgreen;" ) form2
