--- a/source/gui/index.jade
+++ b/source/gui/index.jade
@@ -26,7 +26,7 @@ block content
         li Пункт списка
         li Пункт списка
         
-      hr.i-unstyled
+      hr.unstyled
       
       ol
         li Пункт списка
@@ -45,7 +45,7 @@ block content
         .col-sm-6
           S7 Airlines (бренд авиакомпании «Сибирь») обладает широкой сетью внутренних маршрутов, выстроенной на базе авиатранспортных узлов в Москве (Домодедово) и Новосибирске (Толмачёво). S7 Airlines также выполняет <a href="">регулярные</a> полеты в страны СНГ, Европу, Ближний Восток, Юго-Восточную Азию и страны Азиатско-Тихоокеанского региона.
           
-      hr.i-unstyled
+      hr.unstyled
           
       .row
         .col-sm-6
