--- a/source/index.jade
+++ b/source/index.jade
@@ -1,4 +1,4 @@
-extends ./layouts/main.jade
+﻿extends ./layouts/main.jade
 
 block title
   title Main page | travellers
@@ -7,7 +7,46 @@ block content
 
   hr.i-unstyled
   
-  include ./components/banner.3/template
-  include ./components/banner.111/template
   include ./components/banner.21/template
+  include ./components/banner.111/template
   include ./components/banner.12/template
+  
+  hr.i-unstyled.i-size-S
+  
+  include ./components/forms/template
+  
+  hr.i-size-L
+  
+  .row
+    .col-sm-8.col-sm-offset-2
+      h1 Travellers — универсальное туристкое агентство
+      p Мы рады приветствовать вас на сайте туристической компании Travellers, мы бережно относимся к вашему времени и комфорту, поэтому наш сайт максимально прост и удобен в использование. 
+      p Вы готовы выбрать собственный отдых, тогда обратите внимание на преимущества,к оторыми вы сможете воспользваться, обратившись к нам.
+      
+      hr
+      
+      .row
+        .col-sm-6.center
+          img.img-responsive( src="/upload/about1.png" alt="" )
+        .col-sm-6
+          h2 Широчайший выбор стран
+          p Пляжный отдых, экскурсионные программы, круизы, горные лыжи, авиабилеты и отели, посещение мероприятий, на нашем сайте вы сможете найти предложение более, чем по 30 странам мира.
+      
+      hr
+      
+      .row
+        .col-sm-6.col-sm-push-6.center
+          img.img-responsive( src="/upload/about2.png" alt="" )
+        .col-sm-6.col-sm-pull-6
+          h2 Качественный сервис
+          p Наши сотрудники хорошо разбираются во всех направлениях предлагаемых нашим агентством помогают вам ответив на любой ваш вопрос в удобное для вас время.
+      
+      hr
+      
+      .row
+        .col-sm-6.center
+          img.img-responsive( src="/upload/about1.png" alt="" )
+        .col-sm-6
+          h2 Надежный партнер
+          p Ответственность нашей компании застрахована в страховой компании «Страховка туристических компаний».
+          p Мы гарантирцем, что заказаные у нас услуги будут предоставлены своевременно и качественно.
