--- a/source/layouts/includes/footer.jade
+++ b/source/layouts/includes/footer.jade
@@ -13,7 +13,7 @@
         h3 Телефоны
         p + 8 888 88 88 (для Москвичей)<br>+ 7 777 77 77 (для всей России)
         
-        hr.i-unstyled
+        hr.unstyled
         
         ul.unstyled.b-footer-social
           li
@@ -27,7 +27,8 @@
           li
             a( href="" ).i-gp
 
-
+      hr.unstyled.visible-xs-block
+      
       .col-sm-4
         h3 Полезная информация
         ul.unstyled
@@ -49,7 +50,7 @@
       p ООО "Джет Тревел" намерено в соответствии со ст. 435 ГК РФ реализовать туристский продукт тем агентствам из реестра агентств ООО "Джет Тревел", которыми будет принято предложение. Оферта действует на день предложения.
       p Информация (в том числе, о стоимости турпродукта), содержащаяся на интернет-сайте www.jettravel.ru предназначена для определенного ограниченного круга юридических лиц: исключительно для туристских агентств, заключивших агентские договоры с OOО "Джет Тревел" и содержащихся в базе данных агентств ООО "Джет Тревел"; вся информация (в том числе, о стоимости турпродукта) для любых иных юридических и физических лиц может быть получена при личном обращении в компанию по телефонам и адресам электронной почты, приведенным на сайте.
     
-    hr.i-unstyled.i-size-S
+    hr.unstyled.i-size-S
     
     .row.xsmall
       .col-xs-6 © Сopyright. Traveller 2016
