--- a/source/styl/gui.styl
+++ b/source/styl/gui.styl
@@ -5,9 +5,9 @@ body
   
 h1
   font-size 32pt
-  line-height 1.74
+  line-height 1.14
   font-weight bold
-  margin-bottom 0.5rem
+  margin-bottom 1.3rem
   
 h2
   font-size 20pt
@@ -19,6 +19,10 @@ h3
   font-size 13.5pt
   line-height 1.4
   font-weight bold
+  
+h1, h2, h3, h4, h5, h6
+  &:first-child
+    margin-top 0
   
 p
   margin 0 0 15pt
@@ -79,3 +83,7 @@ a:focus
   
   p
     margin 10px 0
+    
+.center .img-responsive
+  margin-left auto
+  margin-right auto
