--- a/markup/components/forms/template.html
+++ b/markup/components/forms/template.html
@@ -15,7 +15,7 @@
       </nav>
     </div>
     <div id="form1" class="col-sm-12 b-forms__tab">
-      <div style="width: 300px; background-color: pink;">form1</div>
+      <div style="width: 300px; background-color: pink;"><script charset="utf-8" src="//www.travelpayouts.com/widgets/da489d8f0fb702dbcbd9a81294264b48.js?v=469" async></script></div>
     </div>
     <div id="form2" class="col-sm-12 b-forms__tab">
       <div style="width: 100px; background-color: lightgreen;">form2</div>
