--- a/source/styl/gui.styl
+++ b/source/styl/gui.styl
@@ -9,6 +9,10 @@ h1
   font-weight bold
   margin-bottom 1.3rem
   
+  @media (max-width: 768px)
+    font-size 18pt
+    
+  
 h2
   font-size 20pt
   line-height 1.4
