--- a/source/styl/banner.styl
+++ b/source/styl/banner.styl
@@ -16,6 +16,22 @@
     
     @media (min-width: 768px)
       padding-top 33.3%
+      
+  .b-card-text
+    position absolute
+    bottom 0
+    left 0
+    width 100%
+    height 100%
+    display flex
+    justify-content center
+    align-items center
+    color #fff
+    font-weight bold
+    font-size 18pt
+    padding 20px
+    line-height 1.2
+    text-align center
     
   .b-banner
     
