--- a/source/styl/materialize-override.styl
+++ b/source/styl/materialize-override.styl
@@ -93,3 +93,9 @@ nav ul .disabled a
   text-align center
   vertical-align middle
   
+.btn,
+.btn-large
+  
+  &,
+  &:hover
+    background-color #cc0033
