--- a/source/styl/bootstrap-override.styl
+++ b/source/styl/bootstrap-override.styl
@@ -14,3 +14,14 @@ a
   margin-right -15px
   margin-left -15px
   margin-bottom 30px
+  
+  &:last-child
+    margin-bottom 0
+    
+  @media (max-width: 768px)
+    margin-bottom 10pt
+    
+.btn
+  &:hover,
+  &:focus
+    color #fff
