Forms normalize.css

--- a/source/index.jade
+++ b/source/index.jade
@@ -50,3 +50,5 @@ block content
           h2 Надежный партнер
           p Ответственность нашей компании застрахована в страховой компании «Страховка туристических компаний».
           p Мы гарантирцем, что заказаные у нас услуги будут предоставлены своевременно и качественно.
+
+  hr.i-size-M.i-unstyled
