Links in the header menu.

--- a/source/layouts/includes/header.jade
+++ b/source/layouts/includes/header.jade
@@ -30,11 +30,11 @@
             a( href="" )
               img( src="/upload/travellers-logo.png" alt="Travellers" )
           li
-            a( href="" ) Туры
+            a( href="/tours/" ) Туры
           li
-            a( href="" ) Авиабилеты
+            a( href="/aviatickets/" ) Авиабилеты
           li
-            a( href="" ) Отели
+            a( href="/hotels/" ) Отели
           li
-            a( href="" ) О нас
+            a( href="/about/" ) О нас
             
