--- a/source/layouts/includes/header.jade
+++ b/source/layouts/includes/header.jade
@@ -8,13 +8,13 @@
           
         ul.unstyled.b-header-top-menu.center.hide-on-med-and-down
           li
-            span.i-disabled( href="" ) Туры
+            span.i-disabled( href="/tours/" ) Туры
           li
-            a( href="" ) Авиабилеты
+            a( href="/aviatickets/" ) Авиабилеты
           li
-            a( href="" ) Отели
+            a( href="/hotels/" ) Отели
           li
-            a( href="" ) О нас
+            a( href="/about/" ) О нас
         
         ul.unstyled.b-header-icons.right
           li
