--- a/source/components/forms/template.jade
+++ b/source/components/forms/template.jade
@@ -4,38 +4,74 @@ link( rel="stylesheet", href="/components/forms/style.css" )
 script( src="/components/forms/script.js" )
 
 .b-forms
-  .row
-    .col-sm-12
-      nav
-        ul.unstyled.tabs
-        
-          li.tab.col-sm-3
-            a( href="#form1" ).valign-wrapper
-              span.valign.center Поиск туров
-              
-          li.tab.col-sm-3
-            a( href="#form2" ).valign-wrapper
-              span.valign.center Поиск авиабилетов
-              
-          li.tab.col-sm-3.disabled
-            a( href="#form3" ).valign-wrapper
-              span.valign.center Поиск отелей
-              
-          li.tab.col-sm-3
-            a( href="#form4" ).valign-wrapper
-              span.valign.center Бронирование автомобилей
+  .hidden-xs
+    .row
+      .col-sm-12
+        nav
+          ul.unstyled.tabs
           
-    #form1.col-sm-12.b-forms__tab
-      div( style="width: 700px; background-color: pink;" ) <script charset="utf-8" src="//www.travelpayouts.com/widgets/2e904aed9b11dc04a26ae5f66e4a9820.js?v=767" async></script>
+            li.tab.col-sm-3
+              a( href="#form1" ).valign-wrapper
+                span.valign.center Поиск туров
+                
+            li.tab.col-sm-3
+              a( href="#form2" ).valign-wrapper
+                span.valign.center Поиск авиабилетов
+                
+            li.tab.col-sm-3.disabled
+              a( href="#form3" ).valign-wrapper
+                span.valign.center Поиск отелей
+                
+            li.tab.col-sm-3
+              a( href="#form4" ).valign-wrapper
+                span.valign.center Бронирование автомобилей
+            
+      #form1.col-sm-12.b-forms__tab
+        div( style="width: 700px; background-color: pink;" ) <script charset="utf-8" src="//www.travelpayouts.com/widgets/2e904aed9b11dc04a26ae5f66e4a9820.js?v=767" async></script>
 
-    
-    #form2.col-sm-12.b-forms__tab
-      div( style="width: 100px; background-color: lightgreen;" ) form2
       
-    #form3.col-sm-12.b-forms__tab
-      div( style="width: 500px; background-color: violet;" ) form3
+      #form2.col-sm-12.b-forms__tab
+        div( style="width: 100px; background-color: lightgreen;" ) form2
+        
+      #form3.col-sm-12.b-forms__tab
+        div( style="width: 500px; background-color: violet;" ) form3
+        
+      #form4.col-sm-12.b-forms__tab
+        div( style="width: 600px; background-color: lightblue;" ) form4
+        
+  .visible-xs-block
+    .row
+      .col-sm-12
+        nav
+          ul.unstyled.tabs
+          
+            li.tab.col-sm-3
+              a( href="#form5" ).valign-wrapper
+                span.valign.center Поиск туров
+                
+            li.tab.col-sm-3
+              a( href="#form6" ).valign-wrapper
+                span.valign.center Поиск авиабилетов
+                
+            li.tab.col-sm-3.disabled
+              a( href="#form7" ).valign-wrapper
+                span.valign.center Поиск отелей
+                
+            li.tab.col-sm-3
+              a( href="#form8" ).valign-wrapper
+                span.valign.center Бронирование автомобилей
+            
+      #form5.col-sm-12.b-forms__tab
+        div( style="width: 300px; background-color: pink;" ) <script charset="utf-8" src="//www.travelpayouts.com/widgets/2e904aed9b11dc04a26ae5f66e4a9820.js?v=767" async></script>
+
       
-    #form4.col-sm-12.b-forms__tab
-      div( style="width: 600px; background-color: lightblue;" ) form4
+      #form6.col-sm-12.b-forms__tab
+        div( style="width: 100px; background-color: lightgreen;" ) <script charset="utf-8" src="//www.travelpayouts.com/widgets/2e904aed9b11dc04a26ae5f66e4a9820.js?v=767" async></script>
+        
+      #form7.col-sm-12.b-forms__tab
+        div( style="width: 500px; background-color: violet;" ) <script charset="utf-8" src="//www.travelpayouts.com/widgets/2e904aed9b11dc04a26ae5f66e4a9820.js?v=767" async></script>
+        
+      #form8.col-sm-12.b-forms__tab
+        div( style="width: 200px; background-color: lightblue;" ) <script charset="utf-8" src="//www.travelpayouts.com/widgets/2e904aed9b11dc04a26ae5f66e4a9820.js?v=767" async></script>
 
 // end /components/forms/
