Request form fixes.

--- a/source/components/forms.request/template.jade
+++ b/source/components/forms.request/template.jade
@@ -9,7 +9,7 @@ script( src="/components/forms.request/script.js" )
       
       hr.i-unstyled
       
-      form( action="" method="get" )
+      form( action="sent/" method="get" )
         
         .input-field
           input#first_name.validate( type="text" required )
