--- a/source/styl/bootstrap-override.styl
+++ b/source/styl/bootstrap-override.styl
@@ -10,16 +10,20 @@ a
   padding-right 15px
   padding-left 15px
   
-.container .row
-  margin-right -15px
-  margin-left -15px
-  margin-bottom 30px
+.container
+  padding-right 15px
+  padding-left 15px
   
-  &:last-child
-    margin-bottom 0
+  .row
+    margin-right -15px
+    margin-left -15px
+    margin-bottom 30px
+  
+    &:last-child
+      margin-bottom 0
     
-  @media (max-width: 768px)
-    margin-bottom 10pt
+    @media (max-width: 768px)
+      margin-bottom 10pt
     
 .btn
   &:hover,
