Markup - Request form fixes.

--- a/markup/components/forms.request/template.html
+++ b/markup/components/forms.request/template.html
@@ -6,7 +6,7 @@
   <div class="row">
     <div class="col-sm-8 col-sm-offset-2">
       <hr class="i-unstyled"/>
-      <form action="" method="get">
+      <form action="sent/" method="get">
         <div class="input-field">
           <input id="first_name" type="text" required="required" class="validate"/>
           <label for="first_name">Как Вас зовут </label>
