--- a/source/components/banner.111/template.jade
+++ b/source/components/banner.111/template.jade
@@ -4,7 +4,7 @@
   
   .row
     .col-sm-4( style="background-image: url( '/upload/banner2.jpg' )" )
-      .b-banner__text
+      a( href="/tours/tour/" ).b-banner__text
         .b-banner__section Южная америка
         .b-banner__title Гаваи, Коста Рика, Куба
         .b-banner__type Туры с авиаперелетом. Пляжный отдых
@@ -13,7 +13,7 @@
           span.b-banner__price__num 266 800 руб.
           
     .col-sm-4( style="background-image: url( '/upload/banner3.jpg' )" )
-      .b-banner__text
+      a( href="/tours/tour/" ).b-banner__text
         .b-banner__section Горные лыжи
         .b-banner__title Австрия
         .b-banner__type Туры на европейские горнолыжные курорты.
@@ -22,7 +22,7 @@
           span.b-banner__price__num 106 800 руб.
           
     .col-sm-4( style="background-image: url( '/upload/banner4.jpg' )" )
-      .b-banner__text
+      a( href="/tours/tour/" ).b-banner__text
         .b-banner__section Северная америка
         .b-banner__title Путешествие по Аризоне
         .b-banner__type Туры с авиаперелетом
