--- a/source/components/banner.12/tour-card.jade
+++ b/source/components/banner.12/tour-card.jade
@@ -4,9 +4,9 @@
   
   .row
     .col-sm-4( style="background-image: url( '/upload/banner3.jpg' )" )
-      .b-card-text Недорогие туры в крым
+      a( href="/tours/tour/" ).b-card-text Недорогие туры в крым
           
     .col-sm-8( style="background-image: url( '/upload/banner2.jpg' )" )
-      .b-card-text Экскурсионные туры в Европу
+      a( href="/tours/tour/" ).b-card-text Экскурсионные туры в Европу
           
 // end /components/banner.12/
