--- a/source/components/banner.21/template.jade
+++ b/source/components/banner.21/template.jade
@@ -4,7 +4,7 @@
   
   .row
     .col-sm-8( style="background-image: url( '/upload/banner6.jpg' )" )
-      .b-banner__text
+      a( href="/tours/tour/" ).b-banner__text
         .b-banner__section Старушка Европа
         .b-banner__title Увидеть Париж
         .b-banner__type Прогулки по летнему Парижу
@@ -13,7 +13,7 @@
           span.b-banner__price__num 76 900 руб.
           
     .col-sm-4( style="background-image: url( '/upload/banner5.jpg' )" )
-      .b-banner__text
+      a( href="/tours/tour/" ).b-banner__text
         .b-banner__section Сказка
         .b-banner__title Северное сияние в Исландии
         .b-banner__type Туры с авиаперелетом
