--- a/source/components/banner.21/tour-card.jade
+++ b/source/components/banner.21/tour-card.jade
@@ -4,9 +4,9 @@
   
   .row
     .col-sm-8( style="background-image: url( '/upload/banner6.jpg' )" )
-      .b-card-text Экскурсионные туры в Европу
+      a( href="/tours/tour/" ).b-card-text Экскурсионные туры в Европу
           
     .col-sm-4( style="background-image: url( '/upload/banner5.jpg' )" )
-      .b-card-text Недорогие туры в Крым
+      a( href="/tours/tour/" ).b-card-text Недорогие туры в Крым
 
 // end /components/banner.21/
