--- a/source/components/banner.3/template.jade
+++ b/source/components/banner.3/template.jade
@@ -4,7 +4,7 @@
   
   .row
     .col-sm-12( style="background-image: url( '/upload/banner1.jpg' )" )
-      .b-banner__text
+      a( href="/tours/tour/" ).b-banner__text
         .b-banner__section Старушка Европа
         .b-banner__title Увидеть Париж
         .b-banner__type Прогулки по летнему Парижу
