--- a/source/components/banner.3/tour-card.jade
+++ b/source/components/banner.3/tour-card.jade
@@ -4,6 +4,6 @@
   
   .row
     .col-sm-12( style="background-image: url( '/upload/banner1.jpg' )" )
-      .b-card-text Экскурсионные туры в Европу
+      a( href="/tours/tour/" ).b-card-text Экскурсионные туры в Европу
 
 // end /components/banner.3/
