--- a/source/styl/banner.styl
+++ b/source/styl/banner.styl
@@ -32,10 +32,12 @@
     padding 20px
     line-height 1.2
     text-align center
+    text-decoration none
     
   .b-banner
     
     &__text
+      display block
       position absolute
       bottom 0
       left 0
@@ -45,16 +47,16 @@
       text-align center
       
     &__section
-      padding 0 10px
+      padding 0 15px
       font-size 10.5pt
       font-weight bold
       position absolute
-      top 4%
+      top 6%
       left 0
       width 100%
       
     &__title
-      padding 0 10px
+      padding 0 15px
       font-size 16pt
       font-weight bold
       line-height 30px
@@ -64,7 +66,7 @@
       width 100%
       
     &__type
-      padding 0 10px
+      padding 0 15px
       font-size 11pt
       line-height 24px
       position absolute
@@ -73,7 +75,7 @@
       width 100%
       
     &__price
-      padding 0 10px
+      padding 0 15px
       font-size 16pt
       position absolute
       bottom 5%
