--- a/source/styl/materialize-override.styl
+++ b/source/styl/materialize-override.styl
@@ -131,3 +131,14 @@ textarea.materialize-textarea
 .btn-large:hover,
 .btn-floating:hover
   box-shadow none
+  
+.container
+  width 90%
+
+  @media only screen and (min-width: 601px)
+    .container
+      width 90%
+
+  @media only screen and (min-width: 993px)
+    .container
+      width 90%
