--- a/markup/components/banner.111/template.html
+++ b/markup/components/banner.111/template.html
@@ -2,39 +2,30 @@
 <!-- start /components/banner.111/-->
 <div class="b-banner-111 b-banner">
   <div class="row">
-    <div style="background-image: url( '/upload/banner2.jpg' )" class="col-sm-4">
-      <div class="b-banner__text">
+    <div style="background-image: url( '/upload/banner2.jpg' )" class="col-sm-4"><a href="/tours/tour/" class="b-banner__text">
         <div class="b-banner__section">Южная америка</div>
         <div class="b-banner__title">Гаваи, Коста Рика, Куба</div>
         <div class="b-banner__type">Туры с авиаперелетом. Пляжный отдых</div>
         <div class="b-banner__price">
           от
            <span class="b-banner__price__num">266 800 руб.</span>
-        </div>
-      </div>
-    </div>
-    <div style="background-image: url( '/upload/banner3.jpg' )" class="col-sm-4">
-      <div class="b-banner__text">
+        </div></a></div>
+    <div style="background-image: url( '/upload/banner3.jpg' )" class="col-sm-4"><a href="/tours/tour/" class="b-banner__text">
         <div class="b-banner__section">Горные лыжи</div>
         <div class="b-banner__title">Австрия</div>
         <div class="b-banner__type">Туры на европейские горнолыжные курорты.</div>
         <div class="b-banner__price">
           от
            <span class="b-banner__price__num">106 800 руб.</span>
-        </div>
-      </div>
-    </div>
-    <div style="background-image: url( '/upload/banner4.jpg' )" class="col-sm-4">
-      <div class="b-banner__text">
+        </div></a></div>
+    <div style="background-image: url( '/upload/banner4.jpg' )" class="col-sm-4"><a href="/tours/tour/" class="b-banner__text">
         <div class="b-banner__section">Северная америка</div>
         <div class="b-banner__title">Путешествие по Аризоне</div>
         <div class="b-banner__type">Туры с авиаперелетом</div>
         <div class="b-banner__price">
           от
            <span class="b-banner__price__num">466 800 руб.</span>
-        </div>
-      </div>
-    </div>
+        </div></a></div>
   </div>
 </div>
 <!-- end /components/banner.111/-->
