--- a/markup/components/banner.111/tour-card.html
+++ b/markup/components/banner.111/tour-card.html
@@ -2,15 +2,9 @@
 <!-- start /components/banner.111/-->
 <div class="b-banner-111 b-banner">
   <div class="row">
-    <div style="background-image: url( '/upload/banner2.jpg' )" class="col-sm-4">
-      <div class="b-card-text">Экскурсионные туры в Европу</div>
-    </div>
-    <div style="background-image: url( '/upload/banner3.jpg' )" class="col-sm-4">
-      <div class="b-card-text">Недорогие туры в крым</div>
-    </div>
-    <div style="background-image: url( '/upload/banner4.jpg' )" class="col-sm-4">
-      <div class="b-card-text">Экскурсионные туры в Европу</div>
-    </div>
+    <div style="background-image: url( '/upload/banner2.jpg' )" class="col-sm-4"><a href="/tours/tour/" class="b-card-text">Экскурсионные туры в Европу</a></div>
+    <div style="background-image: url( '/upload/banner3.jpg' )" class="col-sm-4"><a href="/tours/tour/" class="b-card-text">Недорогие туры в крым</a></div>
+    <div style="background-image: url( '/upload/banner4.jpg' )" class="col-sm-4"><a href="/tours/tour/" class="b-card-text">Экскурсионные туры в Европу</a></div>
   </div>
 </div>
 <!-- end /components/banner.111/-->
