--- a/markup/components/banner.12/template.html
+++ b/markup/components/banner.12/template.html
@@ -2,28 +2,22 @@
 <!-- start /components/banner.12/-->
 <div class="b-banner-12 b-banner">
   <div class="row">
-    <div style="background-image: url( '/upload/banner3.jpg' )" class="col-sm-4">
-      <div class="b-banner__text">
+    <div style="background-image: url( '/upload/banner3.jpg' )" class="col-sm-4"><a href="/tours/tour/" class="b-banner__text">
         <div class="b-banner__section">Старушка Европа</div>
         <div class="b-banner__title">Увидеть Париж</div>
         <div class="b-banner__type">Прогулки по летнему Парижу</div>
         <div class="b-banner__price">
           от
            <span class="b-banner__price__num">76 900 руб.</span>
-        </div>
-      </div>
-    </div>
-    <div style="background-image: url( '/upload/banner2.jpg' )" class="col-sm-8">
-      <div class="b-banner__text">
+        </div></a></div>
+    <div style="background-image: url( '/upload/banner2.jpg' )" class="col-sm-8"><a href="/tours/tour/" class="b-banner__text">
         <div class="b-banner__section">Сказка</div>
         <div class="b-banner__title">Северное сияние в Исландии</div>
         <div class="b-banner__type">Туры с авиаперелетом</div>
         <div class="b-banner__price">
           от
            <span class="b-banner__price__num">466 800 руб.</span>
-        </div>
-      </div>
-    </div>
+        </div></a></div>
   </div>
 </div>
 <!-- end /components/banner.12/-->
