--- a/markup/components/banner.21/tour-card.html
+++ b/markup/components/banner.21/tour-card.html
@@ -2,12 +2,8 @@
 <!-- start /components/banner.21/-->
 <div class="b-banner-21 b-banner">
   <div class="row">
-    <div style="background-image: url( '/upload/banner6.jpg' )" class="col-sm-8">
-      <div class="b-card-text">Экскурсионные туры в Европу</div>
-    </div>
-    <div style="background-image: url( '/upload/banner5.jpg' )" class="col-sm-4">
-      <div class="b-card-text">Недорогие туры в Крым</div>
-    </div>
+    <div style="background-image: url( '/upload/banner6.jpg' )" class="col-sm-8"><a href="/tours/tour/" class="b-card-text">Экскурсионные туры в Европу</a></div>
+    <div style="background-image: url( '/upload/banner5.jpg' )" class="col-sm-4"><a href="/tours/tour/" class="b-card-text">Недорогие туры в Крым</a></div>
   </div>
 </div>
 <!-- end /components/banner.21/-->
