--- a/markup/components/banner.3/tour-card.html
+++ b/markup/components/banner.3/tour-card.html
@@ -2,9 +2,7 @@
 <!-- start /components/banner.3/-->
 <div class="b-banner-3 b-banner">
   <div class="row">
-    <div style="background-image: url( '/upload/banner1.jpg' )" class="col-sm-12">
-      <div class="b-card-text">Экскурсионные туры в Европу</div>
-    </div>
+    <div style="background-image: url( '/upload/banner1.jpg' )" class="col-sm-12"><a href="/tours/tour/" class="b-card-text">Экскурсионные туры в Европу</a></div>
   </div>
 </div>
 <!-- end /components/banner.3/-->
