Forms icons for mobile version.

--- a/source/components/forms/style.styl
+++ b/source/components/forms/style.styl
@@ -16,6 +16,34 @@
           padding 0
           line-height 20px
           width 100%
+        
+        &.i-tours
+          background embedurl( 'img/tours.png' ) no-repeat center center
+          
+          &.active
+            background-image embedurl( 'img/tours-active.png' )
+            background-color #fff
+          
+        &.i-avia
+          background embedurl( 'img/avia.png' ) no-repeat center center
+          
+          &.active
+            background-image embedurl( 'img/avia-active.png' )
+            background-color #fff
+          
+        &.i-hotels
+          background embedurl( 'img/hotels.png' ) no-repeat center center
+          
+          &.active
+            background-image embedurl( 'img/hotels-active.png' )
+            background-color #fff
+          
+        &.i-cars
+          background embedurl( 'img/cars.png' ) no-repeat center center
+          
+          &.active
+            background-image embedurl( 'img/cars-active.png' )
+            background-color #fff
           
       &.disabled
         opacity( 0.4 )
