--- a/source/components/forms/template.jade
+++ b/source/components/forms/template.jade
@@ -46,20 +46,16 @@ script( src="/components/forms/script.js" )
           ul.unstyled.tabs
           
             li.tab.col-sm-3
-              a( href="#form5" ).valign-wrapper
-                span.valign.center Поиск туров
+              a( href="#form5" title="Поиск туров" ).i-tours
                 
             li.tab.col-sm-3
-              a( href="#form6" ).valign-wrapper
-                span.valign.center Поиск авиабилетов
+              a( href="#form6" title="Поиск авиабилетов" ).i-avia
                 
             li.tab.col-sm-3.disabled
-              a( href="#form7" ).valign-wrapper
-                span.valign.center Поиск отелей
+              a( href="#form7" title="Поиск отелей" ).i-hotels
                 
             li.tab.col-sm-3
-              a( href="#form8" ).valign-wrapper
-                span.valign.center Бронирование автомобилей
+              a( href="#form8" titile="Бронирование автомобилей" ).i-cars
             
       #form5.col-sm-12.b-forms__tab
         div( style="width: 300px; background-color: pink;" ) <script charset="utf-8" src="//www.travelpayouts.com/widgets/2e904aed9b11dc04a26ae5f66e4a9820.js?v=767" async></script>
