--- a/source/layouts/includes/footer.jade
+++ b/source/layouts/includes/footer.jade
@@ -4,6 +4,8 @@
       .col-sm-4
         h3 О компании
         p S7 Airlines (бренд авиакомпании «Сибирь») обладает широкой сетью внутренних маршрутов, выстроенной на базе авиатранспортных узлов в Москве (Домодедово) и Новосибирске (Толмачёво). S7 Airlines также выполняет <a href="">регулярные</a> полеты в страны СНГ, Европу, Ближний Восток, Юго-Восточную Азию и страны Азиатско-Тихоокеанского региона.
+
+      hr.unstyled.visible-xs-block.i-size-M
         
       .col-sm-4
         h3 Офис
