--- a/source/styl/materialize-override.styl
+++ b/source/styl/materialize-override.styl
@@ -136,9 +136,10 @@ textarea.materialize-textarea
   width 90%
 
   @media only screen and (min-width: 601px)
-    .container
-      width 90%
+    width 90%
 
   @media only screen and (min-width: 993px)
-    .container
-      width 90%
+    width 90%
+
+  @media only screen and (max-width: 600px)
+    width 100%
