Table and price block on the Tour page.

--- a/source/styl/bootstrap-override.styl
+++ b/source/styl/bootstrap-override.styl
@@ -35,3 +35,30 @@ label
   
 img
   vertical-align top
+  
+//tables
+.table
+  
+  caption
+    font-weight bold
+    text-align left
+    border-bottom 1px solid #cdcdcd
+    padding-bottom 16px
+    font-size 14pt
+        
+    @media ( max-width 768px )
+      padding 16px
+  
+  > thead,
+  > tbody,
+  > tfoot
+    > tr
+      > th,
+      > td
+        padding 20px 20px 20px 54px
+        border-width 1px
+        border-bottom 1px solid #cdcdcd
+        border-color #cdcdcd
+        
+        @media ( max-width 768px )
+          padding 20px
