--- a/source/tours/tour/index.jade
+++ b/source/tours/tour/index.jade
@@ -132,6 +132,60 @@ block content
         li Пункт списка
       
   hr.i-size-L
+  
+  .table-responsive
+    table.table.table-hover
+      caption
+        .row
+          .col-sm-8.col-sm-offset-2 Название таблицы
+      thead
+        tr
+          th
+            Заголовок столбца 1
+          th
+            Заголовок столбца 2
+          th
+            Заголовок столбца 3
+          th
+            Заголовок столбца 4
+      tbody
+        tr
+          td
+            Пункт 1
+          td
+            Пункт 2
+          td
+            Пункт 3
+          td
+            Пункт 4
+        tr
+          td
+            Пункт 1
+          td
+            Пункт 2
+          td
+            Пункт 3
+          td
+            Пункт 4
+
+  hr.i-size-M.i-unstyled
+
+  .row
+    .col-sm-8.col-sm-offset-2
+      
+      .row
+        .col-sm-6.text-large
+          b Цена: 
+            span.text-nowrap 98 740 руб.
+        hr.i-size-S.i-unstyled.visible-xs-block
+        .col-sm-6          
+          a.btn.btn-large.btn-wide( href="" ) Отправить заявку
+          
+      hr.i-size-S.i-unstyled.visible-xs-block
+          
+      p.xsmall.relative <span class="asterisk">*</span>По правилам чартерных перевозок авиакомпания, аэропорт и время вылета могут меняться.По правилам чартерных перевозок авиакомпания, аэропорт и время вылета могут меняться. По правилам чартерных перевозок авиакомпания, аэропорт и время вылета могут меняться.
+      
+  hr.i-size-L
 
   .row
     .col-sm-8.col-sm-offset-2
