--- a/source/styl/gui.styl
+++ b/source/styl/gui.styl
@@ -108,3 +108,18 @@ a:focus
   
 .btn-wide
   width 100%
+  
+.text-large
+  font-size 20pt
+  
+.relative
+  position relative
+
+.asterisk
+  position absolute
+  top 0
+  left -20px
+  font-size 1rem
+  
+  @media ( max-width 768px )
+    left -10px
