--- a/source/styl/gui.styl
+++ b/source/styl/gui.styl
@@ -3,6 +3,7 @@ body
   font-size 12pt
   line-height 1.9
   font-weight 300
+  font-family "Helvetica Neue",Helvetica,"Open Sans",Arial,sans-serif
   
 h1
   font-size 32pt
@@ -52,7 +53,6 @@ ol
   li
     padding-left 2px
     margin-bottom 14px
-    font-size 13.5pt
     
     &:last-child
       margin-bottom 0
