Markup - Helvetica font.

--- a/source/gui/index.jade
+++ b/source/gui/index.jade
@@ -40,18 +40,30 @@ block content
     .col-sm-8.col-sm-offset-2
     
       .row
+        .col-sm-6.center
+          img.img-responsive( src="/upload/about1.png" alt="" )
         .col-sm-6
-          img.img-responsive( src="/upload/img.gif" )
-        .col-sm-6
-          S7 Airlines (бренд авиакомпании «Сибирь») обладает широкой сетью внутренних маршрутов, выстроенной на базе авиатранспортных узлов в Москве (Домодедово) и Новосибирске (Толмачёво). S7 Airlines также выполняет <a href="">регулярные</a> полеты в страны СНГ, Европу, Ближний Восток, Юго-Восточную Азию и страны Азиатско-Тихоокеанского региона.
-          
-      hr.unstyled
-          
+          h2 Широчайший выбор стран
+          p Пляжный отдых, экскурсионные программы, круизы, горные лыжи, авиабилеты и отели, посещение мероприятий, на нашем сайте вы сможете найти предложение более, чем по 30 странам мира.
+      
+      hr.i-unstyled
+      
       .row
+        .col-sm-6.col-sm-push-6.center
+          img.img-responsive( src="/upload/about2.png" alt="" )
+        .col-sm-6.col-sm-pull-6
+          h2 Качественный сервис
+          p Наши сотрудники хорошо разбираются во всех направлениях предлагаемых нашим агентством помогают вам ответив на любой ваш вопрос в удобное для вас время.
+      
+      hr.i-unstyled
+      
+      .row
+        .col-sm-6.center
+          img.img-responsive( src="/upload/about3.png" alt="" )
         .col-sm-6
-          S7 Airlines (бренд авиакомпании «Сибирь») обладает широкой сетью внутренних маршрутов, выстроенной на базе авиатранспортных узлов в Москве (Домодедово) и Новосибирске (Толмачёво). S7 Airlines также выполняет <a href="">регулярные</a> полеты в страны СНГ, Европу, Ближний Восток, Юго-Восточную Азию и страны Азиатско-Тихоокеанского региона.
-        .col-sm-6
-          img.img-responsive( src="/upload/img.gif" )
+          h2 Надежный партнер
+          p Ответственность нашей компании застрахована в страховой компании «Страховка туристических компаний».
+          p Мы гарантирцем, что заказаные у нас услуги будут предоставлены своевременно и качественно.
             
   .row
     - var i = 0
