--- a/source/index.jade
+++ b/source/index.jade
@@ -32,7 +32,7 @@ block content
           h2 Широчайший выбор стран
           p Пляжный отдых, экскурсионные программы, круизы, горные лыжи, авиабилеты и отели, посещение мероприятий, на нашем сайте вы сможете найти предложение более, чем по 30 странам мира.
       
-      hr
+      hr.i-unstyled
       
       .row
         .col-sm-6.col-sm-push-6.center
@@ -41,11 +41,11 @@ block content
           h2 Качественный сервис
           p Наши сотрудники хорошо разбираются во всех направлениях предлагаемых нашим агентством помогают вам ответив на любой ваш вопрос в удобное для вас время.
       
-      hr
+      hr.i-unstyled
       
       .row
         .col-sm-6.center
-          img.img-responsive( src="/upload/about1.png" alt="" )
+          img.img-responsive( src="/upload/about3.png" alt="" )
         .col-sm-6
           h2 Надежный партнер
           p Ответственность нашей компании застрахована в страховой компании «Страховка туристических компаний».
