--- a/source/layouts/includes/header.jade
+++ b/source/layouts/includes/header.jade
@@ -18,11 +18,17 @@
         
         ul.unstyled.b-header-icons.right
           li
-            a( href="" ).b-phone-icon
+            a( href="#phone-modal" ).b-phone-icon.modal-trigger
               i
           li
             a.b-header-nav.b-menu-icon( href="" data-activates="slide-out" )
               i
+        #phone-modal.modal
+          .modal-content
+            h4 Modal Header
+            p A bunch of text
+          .modal-footer
+            a( href="#!" ).modal-action.modal-close.waves-effect.waves-green.btn-flat Agree
               
         ul#slide-out.side-nav.unstyled
           li.side-nav-back(  data-activates="slide-out" )
