--- a/source/styl/gui.styl
+++ b/source/styl/gui.styl
@@ -73,6 +73,9 @@ ul
     
 hr
   border-top-color #e0e0e0
+  margin-top $grid-gap
+  margin-bottom $grid-gap
+  
   &.i-size-XS
     margin 2px 0
     
@@ -80,13 +83,13 @@ hr
     margin 5px 0
     
   &.i-size-M
-    margin 10pt 0
+    margin 10px 0
     
   &.i-size-L
-    margin 40px 0
+    margin 30px 0
     
   &.i-size-XL
-    margin 65px 0
+    margin 60px 0
     
   &.unstyled,
   &.i-unstyled
