--- a/source/modules/modal/include.jade
+++ b/source/modules/modal/include.jade
@@ -5,9 +5,12 @@
     
     .modal-phones
       i.b-phone-icon
-      div 8 800 80 90 100
-      div +7 495 350 00 00
-      div +7 495 350 00 00
+      div
+        a( href="tel:+88008090100" ) 8 800 80 90 100
+      div
+        a( href="tel:+74953500000" ) +7 495 350 00 00
+      div
+        a( href="tel:+74953500000" ) +7 495 350 00 00
     
     .modal-post
       i.b-post-icon
