--- a/source/modules/modal/style.styl
+++ b/source/modules/modal/style.styl
@@ -63,6 +63,15 @@
     @media( max-width 750px )
       margin-bottom 46px
   
+    a
+      color #333
+      text-decoration none
+      
+      &:hover,
+      &:focus
+        color #f36
+        text-decoration none
+  
     div
       font-size 13.5pt
       margin-bottom 4px
