--- a/source/modules/modal/include.jade
+++ b/source/modules/modal/include.jade
@@ -1,17 +1,17 @@
 ﻿#phoneModal.modal
-  a( href="#!" ).modal-action.modal-close
+  a( href="#!" rel="nofollow" ).modal-action.modal-close
   .modal-content.text-center
     h2 Связаться с нами
     
     .modal-phones
       i.b-phone-icon
       div
-        a( href="tel:+88008090100" ) 8 800 80 90 100
+        a( href="tel:+88008090100" rel="nofollow" ) 8 800 80 90 100
       div
-        a( href="tel:+74953500000" ) +7 495 350 00 00
+        a( href="tel:+74953500000" rel="nofollow" ) +7 495 350 00 00
       div
-        a( href="tel:+74953500000" ) +7 495 350 00 00
+        a( href="tel:+74953500000" rel="nofollow" ) +7 495 350 00 00
     
     .modal-post
       i.b-post-icon
-      a( href="request" ) Написать нам
+      a( href="/request/" ) Написать нам
