--- a/source/styl/bootstrap-override.styl
+++ b/source/styl/bootstrap-override.styl
@@ -62,3 +62,7 @@ img
         
         @media ( max-width 768px )
           padding 20px
+          
+a.btn:hover,
+a.btn:focus
+  text-decoration none
